@@ -1,9 +1,13 @@
 package com.lfs.product_ms.config;
 
+import lombok.extern.slf4j.Slf4j;
+import org.apache.commons.logging.Log;
+import org.slf4j.Logger;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 import org.springframework.core.convert.converter.Converter;
 import org.springframework.security.authentication.AbstractAuthenticationToken;
+import org.springframework.security.config.annotation.method.configuration.EnableMethodSecurity;
 import org.springframework.security.config.annotation.web.builders.HttpSecurity;
 import org.springframework.security.config.annotation.web.configuration.EnableWebSecurity;
 import org.springframework.security.config.annotation.web.configurers.AbstractHttpConfigurer;
@@ -19,6 +23,7 @@ import java.util.Map;
 
 @Configuration
 @EnableWebSecurity
+@EnableMethodSecurity
 public class SecurityConfig {
 
     @Bean
@@ -27,9 +32,10 @@ public class SecurityConfig {
                 .csrf(AbstractHttpConfigurer::disable)
                 .authorizeHttpRequests(authorize -> authorize
                         .requestMatchers(request ->
-                                request.getRequestURI().contains("/actuator/inventory")).permitAll()
+                                request.getRequestURI().contains("/actuator/products")).permitAll()
                         .anyRequest().authenticated())
                 .oauth2ResourceServer(config -> config.jwt(jwtConfigurer -> jwtConfigurer.jwtAuthenticationConverter(jwtAutConverter())));
+              
         return http.build();
     }
 
@@ -44,7 +50,7 @@ public class SecurityConfig {
 class KeycloakRealmRoleConverter implements Converter<Jwt, Collection<GrantedAuthority>> {
     @Override
     public Collection<GrantedAuthority> convert(Jwt jwt) {
-        if ( jwt.getClaims() == null ) return Collections.emptyList();
+        if ( jwt.getClaims() == null ) return List.of();
 
         final Map<String, List<String>> realmAccess = (Map<String, List<String>>) jwt.getClaims().get("realm_access");
         return  realmAccess.get("roles").stream()
